--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.7.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-countup": "^6.5.0",
